make it act more like a real template

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,41 @@
-.DS_Store
-node_modules
+# soroban/Rust output
+target
+.soroban
+
+# the hello-world contract doesn't need to stay
+contracts/hello_world
+
+# build output
 /build
-/.svelte-kit
 /package
+
+# generated types
+/.svelte-kit
+
+# dependencies
+node_modules
+
+# logs and old configs
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
 .env
 .env.*
 !.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
+
+# macOS-specific files
+.DS_Store
+
+# generated contract clients (you may want to actually KEEP these in your _actual_ project)
+packages/*
+# if you have other workspace packages, add them here
+!packages/.gitkeep
+
+# generated contract client imports (you may want to actually KEEP these in your _actual_ project)
+src/lib/contracts/*
+!src/lib/contracts/.gitkeep
