--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
+        "setup": "node initialize.js",
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview",
@@ -20,6 +21,7 @@
         "@playwright/test": "^1.47.2",
         "@skeletonlabs/skeleton": "2.10.2",
         "@skeletonlabs/tw-plugin": "^0.4.0",
+        "@stellar/stellar-sdk": "^13.0.0-beta.1",
         "@sveltejs/adapter-auto": "^3.2.5",
         "@sveltejs/kit": "^2.6.1",
         "@sveltejs/vite-plugin-svelte": "^3.1.2",
@@ -30,9 +32,13 @@
         "@typescript-eslint/eslint-plugin": "^8.8.0",
         "@typescript-eslint/parser": "^8.8.0",
         "autoprefixer": "^10.4.20",
+        "base64url": "^3.0.1",
+        "dotenv": "^16.4.5",
         "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.44.1",
+        "glob": "^11.0.0",
+        "passkey-kit": "^0.9.0",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
         "prettier-plugin-svelte": "^3.2.7",
