--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-svelte": "^2.44.1",
         "glob": "^11.0.0",
+        "lucide-svelte": "^0.447.0",
         "passkey-kit": "^0.9.0",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
         "prettier-plugin-svelte": "^3.2.7",
         "svelte": "^4.2.19",
         "svelte-check": "^4.0.4",
+        "svelte-persisted-store": "^0.11.0",
         "tailwindcss": "^3.4.13",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
