--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "eslint-plugin-svelte": "^2.44.1",
         "glob": "^11.0.0",
         "lucide-svelte": "^0.447.0",
-        "passkey-kit": "^0.9.0",
+        "passkey-kit": "^0.9.4",
         "postcss": "^8.4.47",
         "prettier": "^3.3.3",
         "prettier-plugin-svelte": "^3.2.7",
@@ -53,5 +53,10 @@
         "vite-plugin-tailwind-purgecss": "^0.3.3",
         "vitest": "^2.1.2"
     },
-    "type": "module"
+    "type": "module",
+    "pnpm": {
+        "overrides": {
+            "@stellar/stellar-sdk": "$@stellar/stellar-sdk"
+        }
+    }
 }
