update example env

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ PUBLIC_LAUNCHTUBE_URL="https://launchtube.sdf-ecosystem.workers.dev"
 PUBLIC_MERCURY_URL="https://api.mercurydata.app"
 
 # Prefix with "PRIVATE_" to make it only available in SvelteKit server files
-PRIVATE_LAUNCHTUBE_JWT="ask-for-one-in-the-#passkeys-channel-on-discord.gg/stellardev"
+PRIVATE_LAUNCHTUBE_JWT="get-one-from-https://testnet.launchtube.xyz/gen"
 PRIVATE_MERCURY_JWT="get-one-from-mercurydata.app"
-# Or PRIVATE_MERCURY_TOKEN=get-one-from-mercurydata.app
+# Or PRIVATE_MERCURY_TOKEN="get-one-from-mercurydata.app"
 PRIVATE_FUNDER_SECRET_KEY=S...ECRET
