better sort for package.json

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
     "singleQuote": true,
     "trailingComma": "all",
     "printWidth": 100,
-    "plugins": ["prettier-plugin-svelte"],
+    "plugins": ["prettier-plugin-svelte", "prettier-plugin-packagejson"],
     "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
